fix: [PL-41646]: wrapping for AIDA message (#18232)

--- a/src/modules/10-common/components/DocsChat/DocsChat.module.scss
+++ b/src/modules/10-common/components/DocsChat/DocsChat.module.scss
@@ -44,7 +44,7 @@
       .message {
         padding: var(--spacing-small) var(--spacing-large);
         display: inline-block;
-        word-wrap: break-word;
+        word-break: break-word;
         line-height: 20px;
         overflow-x: auto;
 
